# oci-run

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  GNUmakefile  README.md
scripts/: oci-run-wrapper.sh
src/: cli.rs  config.rs  lib.rs
