# This is free and unencumbered software released into the public domain.

[package]
authors = ["ktx3 <ktx3@protonmail.com>"]
description = "Tool for running OCI containers"
edition = "2021"
license = "Unlicense"
name = "oci-run"
publish = false
version = "0.1.1"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
crossterm = "0.26"
dirs = "4"
fern = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = { version = "3", features = ["base-0"] }
users = "0.11"
yaml-merge-keys = { version = "0.5", features = ["serde_yaml"] }
